c2prj1_cards/grade.txt
Grading at Thu Dec 24 16:43:47 UTC 2020
Compiling cards.c
cards.c: In function ‘main’:
cards.c:102:3: error: ‘c3’ undeclared (first use in this function)
   c3.value = 5;
   ^
cards.c:102:3: note: each undeclared identifier is reported only once for each function it appears in
Could not compile your card.c!

Overall Grade: FAILED
